--- a/src/app/modal/invoice/invoice.component.html
+++ b/src/app/modal/invoice/invoice.component.html
@@ -97,4 +97,4 @@
   </div>
 </div>
 
-<div> <button (click)="downloadAsPDF()">Export To PDF</button></div>
+<div> <button  mat-button (click)="downloadAsPDF()">Export To PDF</button></div>
