--- a/src/app/modal/editshoppingcart/editshoppingcart.component.html
+++ b/src/app/modal/editshoppingcart/editshoppingcart.component.html
@@ -37,7 +37,7 @@
         </td>
         <td data-th="Subtotal" class="text-center">{{cartitem.quantity * cartitem.product.price}}</td>
         <td class="actions" data-th="">
-          <button (click)="removecartitem(cartitem)" class="btn btn-danger btn-sm"><i
+          <button mat-button (click)="removecartitem(cartitem)" class="btn btn-danger btn-sm"><i
               class="fa fa-trash-o"></i></button>
         </td>
       </tr>
@@ -51,7 +51,7 @@
             Cancel</button></td>
         <td colspan="2" class="hidden-xs"></td>
         <td class="hidden-xs text-center"><strong>Total {{total}}</strong></td>
-        <td><button (click)="save()" class="btn btn-success btn-block">Save <i class="fa fa-angle-right"></i></button>
+        <td><button mat-button (click)="save()" class="btn btn-success btn-block">Save <i class="fa fa-angle-right"></i></button>
         </td>
       </tr>
     </tfoot>
