--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -88,7 +88,7 @@
             <ng-container matColumnDef="action">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
               <td mat-cell *matCellDef="let user">
-                <button (click)="deleteUser(user,$event)">Delete</button>
+                <button  mat-button (click)="deleteUser(user,$event)">Delete</button>
 
               </td>
             </ng-container>
